kubernetes/apps/selfhosted/omada-controller/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: omada-controller
    app.kubernetes.io/name: omada-controller
  name: omada-controller
spec:
  hostnames:
    - omada.judahrand.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: omada-controller
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
